Fix context menu "Copy image" not working sometimes at hidpi.

Coordinate conversion was happening from viewport->window when opening
the context menu, but not the other direction when asking to copy an
image. Also fixes the same issue when using "Download image" on a
<canvas> (using "Download image" on an <img> uses a different codepath).

R=esprehn@chromium.org
TEST=Right-click the top-left corner of an image and select "Copy image"
     with dsf>1. The image should be copied correctly.
BUG=667223

Review-Url: https://codereview.chromium.org/2541423003
Cr-Commit-Position: refs/heads/master@{#439966}

Former-commit-id: 9e97b2c8a89e7a89003906b5e11a30a6260a4099